--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img class="logo" src="images/logo.png" alt="">
         </a>
         <!-- nav-links starts -->
-        <ul class="nav-links">
+        <ul data-visible="false" class="nav-links">
             <li><a href="#">home</a></li>
             <li><a href="#">product</a></li>
             <li><a href="#">what's new</a></li>
@@ -26,7 +26,7 @@
             <li><a href="#">contact</a></li>
         </ul>
         <!-- nav-links ends -->
-        <i class="fas fa-bars" ></i>
+        <i class="fas fa-bars" aria-controls="nav-links" aria-expanded="false" ></i>
       </nav>
     </header>
     <!-- header end here -->
